# skincare-mcp

./: .gitignore  README.md  app.py  build_db.py  config.toml  database.py  engine.py  generate_user_history.py  live_api.py  mcp_server.py  processor.py  pyproject.toml  user_history.csv
.streamlit/: config.toml
