[project]
name = "skincare-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.83.0",
    "mcp>=1.26.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "thefuzz>=0.22.1",
]
