[project]
name = "skincare-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==4.2.2",
    "anthropic>=0.83.0",
    "mcp>=1.26.0",
    "pandas>=1.4.0,<3",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "thefuzz>=0.22.1",
]
